k8s/apps/app_one/deployment_frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: py3miniapp-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: py3miniapp-frontend
  template:
    metadata:
      labels:
        app: py3miniapp-frontend
    spec:
      containers:
      - name: py3miniapp-frontend
        image: ghcr.io/ling-ling23/py3miniapp:v1
        #imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /live
            port: 80
          initialDelaySeconds: 15
          failureThreshold: 10
          timeoutSeconds: 2
          periodSeconds: 20
        resources:
          requests:
            cpu: "100m" #0.1 cpu - 100 millicores
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
        ports:
        - containerPort: 80
